manifests/09_network-policy-cso-allow-all-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: allow-all-egress
 namespace: openshift-cluster-storage-operator
 annotations:
  include.release.openshift.io/hypershift: "true"
  include.release.openshift.io/ibm-cloud-managed: "true"
  include.release.openshift.io/self-managed-high-availability: "true"
  include.release.openshift.io/single-node-developer: "true"
  capability.openshift.io/name: Storage
spec:
 podSelector:
   matchLabels:
     openshift.storage.network-policy.all-egress: allow
 egress:
 - ports:
   - protocol: TCP
     port: 1
     endPort: 65535
 policyTypes:
 - Egress
